--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VUE_APP_API_URL="https://ejercicio-back.herokuapp.com/api/v1"
+VUE_APP_CLOUDINARY_PRESET="mbix4wbo"
+VUE_APP_CLOUDINARY_URL="https://api.cloudinary.com/v1_1/kevin667/upload"
